--- a/robocaller/docker-compose.yml
+++ b/robocaller/docker-compose.yml
@@ -1,80 +1,56 @@
-version: "3.9"
+version: '3.9'
 services:
-  db:
-    image: postgres:15
+  api:
+    build: .
+    container_name: robotcaller_api
+    ports:
+      - "8000:8000"
+    env_file: .env
+    depends_on:
+      - postgres
+      - redis
+      - asterisk
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+
+  frontend:
+    build: ./frontend
+    container_name: robotcaller_frontend
+    ports:
+      - "7331:7331"
     environment:
-      POSTGRES_USER: robouser
-      POSTGRES_PASSWORD: robopass
-      POSTGRES_DB: robodb
+      - API_URL=http://localhost:8000
+
+  postgres:
+    image: postgres:16
+    container_name: robotcaller_db
+    environment:
+      POSTGRES_USER: caller
+      POSTGRES_PASSWORD: caller
+      POSTGRES_DB: robotcaller
     volumes:
-      - pgdata:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U robouser -d robodb"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
+      - db_data:/var/lib/postgresql/data
 
   redis:
     image: redis:7
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 5s
-      timeout: 3s
-      retries: 10
+    container_name: robotcaller_redis
+
+  worker:
+    build: .
+    container_name: robotcaller_worker
+    command: celery -A worker.celery_app worker --loglevel=info
+    depends_on:
+      - redis
+      - api
 
   asterisk:
     image: andrius/asterisk
-    volumes:
-      - ./asterisk/pjsip.conf:/etc/asterisk/pjsip.conf
-      - ./asterisk/ari.conf:/etc/asterisk/ari.conf
-      - ./voice/sounds:/var/lib/asterisk/sounds/custom
-    network_mode: service:api # même réseau pour simplifier (évite l'expo de ports)
-    depends_on:
-      - api
-
-  api:
-    build:
-      context: .
-      dockerfile: Dockerfile.api
-    env_file:
-      - .env
+    container_name: robotcaller_asterisk
     ports:
-      - "8000:8000"
-    depends_on:
-      db:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-
-  worker:
-    build:
-      context: .
-      dockerfile: Dockerfile.api
-    command: celery -A worker.tasks worker --loglevel=INFO
-    env_file: [.env]
-    depends_on:
-      - api
-      - redis
-      - db
-
-  voice:
-    build:
-      context: .
-      dockerfile: Dockerfile.api
-    command: python -m voice.ari_app
-    env_file: [.env]
-    depends_on:
-      - asterisk
-      - api
-
-  frontend:
-    image: nginx:alpine
+      - "5060:5060/udp"
+      - "8088:8088"
     volumes:
-      - ./frontend:/usr/share/nginx/html:ro
-    ports:
-      - "7331:80"
-    depends_on:
-      - api
+      - ./pjsip.conf:/etc/asterisk/pjsip.conf
+      - ./sounds:/var/lib/asterisk/sounds
 
 volumes:
-  pgdata:
+  db_data:
