change and modif app and client for voice

--- a/robocaller/Dockerfile.api
+++ b/robocaller/Dockerfile.api
@@ -1,7 +1,24 @@
 FROM python:3.11-slim
+
+# Installer les dépendances système nécessaires (git, gcc, libpq)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    git \
+    gcc \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
-COPY requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+
+COPY requirements.txt .
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
+
 COPY . .
-ENV PYTHONUNBUFFERED=1
-CMD ["uvicorn", "api.app:app", "--host", "0.0.0.0", "--port", "8000"]
+
+ENV PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    TZ=UTC
+
+EXPOSE 8000
+
+CMD ["uvicorn", "api.app:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
