modif backend/frontend

--- a/s1/asterisk/configs/ari.conf
+++ b/s1/asterisk/configs/ari.conf
@@ -2,7 +2,7 @@
 enabled = yes
 pretty = yes
 allowed_origins = *
-; accessible sur http://<host>:8088/ari
+; accessible via http://asterisk:8088/ari
 
 [ariuser]
 type = user
