--- a/s1/asterisk/configs/modules.conf
+++ b/s1/asterisk/configs/modules.conf
@@ -1,4 +1,23 @@
 [modules]
 autoload=yes
+
+; === Désactivation des modules inutiles ===
 noload = chan_oss.so
 noload = chan_console.so
+noload = res_musiconhold.so
+
+; === Modules essentiels ===
+load = res_pjsip.so
+load = res_pjsip_endpoint_identifier_user.so
+load = res_pjsip_authenticator_digest.so
+load = res_pjsip_outbound_registration.so
+load = res_pjsip_session.so
+load = chan_pjsip.so
+load = res_http_websocket.so
+load = res_ari.so
+load = res_ari_applications.so
+load = res_ari_bridges.so
+load = res_ari_channels.so
+load = res_ari_playbacks.so
+load = res_ari_device_states.so
+load = res_ari_asterisk.so
