--- a/s1/asterisk/configs/pjsip.conf
+++ b/s1/asterisk/configs/pjsip.conf
@@ -1,32 +1,23 @@
 [global]
 type=global
-user_agent=VoIP-Platform
+user_agent=888SIP-Server
+max_forwards=70
 
 [transport-udp]
 type=transport
 protocol=udp
 bind=0.0.0.0
+allow_reload=yes
 
-[transport-tcp]
-type=transport
-protocol=tcp
-bind=0.0.0.0
-
-[transport-tls]
-type=transport
-protocol=tls
-bind=0.0.0.0
-cert_file=/etc/asterisk/keys/asterisk.pem
-priv_key_file=/etc/asterisk/keys/asterisk.key
-
-;=== Endpoint SIP pour tests internes ===
+; === Internal SIP user 1001 (pour test softphone) ===
 [1001]
 type=endpoint
 context=from-internal
 disallow=all
-allow=ulaw
-auth=auth1001
+allow=ulaw,alaw,opus
 aors=1001
+auth=auth1001
+callerid="Operator 1001" <1001>
 
 [auth1001]
 type=auth
@@ -38,12 +29,12 @@ password=1001
 type=aor
 max_contacts=1
 
-;=== Endpoint pour appels sortants simulés ===
+; === Endpoint utilisé par le backend ARI pour appels sortants ===
 [outgoing]
 type=endpoint
 context=outgoing
 disallow=all
-allow=ulaw
+allow=ulaw,alaw,opus
 aors=outgoing-aor
 
 [outgoing-aor]
