--- a/s1/asterisk/configs/extensions.conf
+++ b/s1/asterisk/configs/extensions.conf
@@ -2,15 +2,15 @@
 TTS_DIR=/var/lib/asterisk/sounds/tts
 
 [from-internal]
-exten => 1001,1,Answer()
+exten => 1001,1,NoOp(Incoming call to 1001)
+ same => n,Answer()
  same => n,Playback(hello-world)
  same => n,Hangup()
 
 [outgoing]
-exten => _X.,1,NoOp(Outgoing call to ${EXTEN})
+exten => _X.,1,NoOp(Outgoing ARI call to ${EXTEN})
  same => n,Stasis(ttsapp,${ARG1})
  same => n,Hangup()
 
 [default]
-exten => _X.,1,NoOp(Default context)
- same => n,Hangup()
+exten => _X.,1,Hangup()
