--- a/s1/backend/package.json
+++ b/s1/backend/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@google-cloud/text-to-speech": "^5.1.0",
     "ari-client": "github:asterisk/node-ari-client",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
+    "node-cron": "^4.2.1",
     "pg": "^8.11.1",
     "socket.io": "^4.7.2",
     "winston": "^3.10.0"
