--- a/s1/docker-compose.yml
+++ b/s1/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   asterisk:
     build: ./asterisk
@@ -7,7 +5,7 @@ services:
     restart: always
     volumes:
       - ./asterisk/configs:/etc/asterisk
-      - ./asterisk/sounds:/var/lib/asterisk/sounds
+      - ./asterisk/sounds:/var/lib/asterisk/sounds     # ✅ sons partagés
     networks:
       - voip-net
     ports:
@@ -25,7 +23,8 @@ services:
     ports:
       - "4000:4000"
     volumes:
-      - ./asterisk/sounds:/var/lib/asterisk/sounds
+      - ./asterisk/sounds:/var/lib/asterisk/sounds     # ✅ accès aux fichiers TTS générés
+      - ./backend/keys:/usr/src/app/keys               # ✅ monte les clés Google TTS
     depends_on:
       - asterisk
       - db
