--- a/s1/asterisk/configs/modules.conf
+++ b/s1/asterisk/configs/modules.conf
@@ -21,3 +21,4 @@ load = res_ari_channels.so
 load = res_ari_playbacks.so
 load = res_ari_device_states.so
 load = res_ari_asterisk.so
+;load = app_playback.so
